@@ -33,6 +33,7 @@
       <menuitem action="HelpModelTransformations"/>
       <menuitem action="HelpGCodeExport"/>
       <menuitem action="HelpSimulation"/>
+      <menuitem action="Help3DView"/>
       <menuitem action="HelpServerMode"/>
       <menuitem action="HelpCommandLine"/>
       <menuitem action="HelpHotkeys"/>
